openproject/create-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: collab
  labels:
    name: collab
