openproject/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject
  namespace: collab
  labels:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/name: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openproject
      app.kubernetes.io/name: openproject
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/name: openproject
    spec:
      containers:
        - name: openproject
          image: openproject/openproject:17-slim
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/openproject/assets
              name: openproject-data
              subPath: assets
            - mountPath: /var/openproject/files
              name: openproject-data
              subPath: files
      restartPolicy: Always
      volumes:
        - name: openproject-data
          persistentVolumeClaim:
            claimName: openproject-data
