openproject/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject-ingress
  namespace: collab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
  labels:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/name: openproject-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: andromeda.picklemustard.dev
      http:
        paths:
          - path: /collab/plan
            pathType: Prefix
            backend:
              service:
                name: openproject-service
                port:
                  number: 8080
